# FreiCalib

./: Dockerfile  Makefile  README.md  calib_K.py  calib_M.py  check_M.py  create_marker.py  detect_marker.py  docker_run.sh  test.py  vis_K.py  vis_det.py
Bundle/: CMakeLists.txt  main.cpp
Bundle/include/: BundleAdjuster.hpp  Camera.hpp  InputReader.hpp  ReprojectionError.h  ReprojectionErrorNoIntrinsic.h  ReprojectionErrorNoIntrinsicNoExtrinsic.h  ReprojectionErrorWithRadialFull.h  utils.h
TagDetector/: AprilTagDetectorBatch.pyx  setupBatch.py
core/: BoardDetector.py  EstimateK.py  EstimateM.py  TagPoseEstimator.py
utils/: CamLib.py  Graph.py  general_util.py  ply_dump.py  vis_util.py
